--- a/css/_nosotros.scss
+++ b/css/_nosotros.scss
@@ -5,16 +5,16 @@
     display: flex;
     align-items: center;
     background-color: $color-footer;
+    
+    .cont12a {
+        max-width: 1400px
+    }
+    .logo {
+        max-width: 550px;
+        width: 100%
+    }
 }
 
-.nosotros .cont12a {
-    max-width: 1400px
-}
-
-.nosotros .logo {
-    max-width: 550px;
-    width: 100%
-}
 
 .nosotros-apple {
     font-size: 60px;
