--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,11 +2,12 @@
 
 .item-logo {
     font-size: x-large;
-}
 
-.item-logo a{
-    text-decoration: none;
-    color: #000;
+    a{
+        text-decoration: none;
+        color: #000;
+    }
+    
 }
 
 .nav-manzana {
