--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,24 +23,19 @@ h3 {
   background-color: rgba(122, 113, 29, 0.336);
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.482);
 }
-
 .boxfooter a {
   text-decoration: none;
   color: #000;
 }
-
 .boxfooter a:hover {
   color: rgb(122, 113, 29);
 }
-
 .boxfooter i {
   font-size: x-large;
 }
-
 .boxfooter i:hover {
   color: #FFF;
 }
-
 .boxfooter h3 {
   color: #FFF;
 }
@@ -63,11 +58,24 @@ h3 {
   transform: rotate(0deg);
   transition: transform 1s ease-in-out;
 }
-
 .rotate-animation:hover, .fa-location-dot:hover, .fa-whatsapp:hover, .fa-phone:hover, .fa-envelope:hover {
   transform: rotate(360deg);
 }
 
+/* Flotante */
+.flotante {
+  animation: rebote 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes rebote {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+/* Fin Whatsapp */
 /* Fin Footer */
 /* Inicio Formulario Contacto */
 .form-contacto {
@@ -77,12 +85,10 @@ h3 {
   margin: 0 auto;
   max-width: 400px;
 }
-
 .form-contacto button {
   background-color: rgb(122, 113, 29);
   border: 1px solid rgb(122, 113, 29) !important;
 }
-
 .form-contacto button:hover {
   background-color: rgba(122, 113, 29, 0.336);
   color: #000;
@@ -100,7 +106,6 @@ a {
   text-decoration: none;
   color: #000;
 }
-
 a:hover {
   color: rgb(122, 113, 29);
 }
@@ -130,7 +135,6 @@ span {
   background-size: cover;
   border-radius: 10px;
 }
-
 .item:hover {
   filter: grayscale(100%);
   transform: scale(1.1);
@@ -220,7 +224,6 @@ span {
 .item-logo {
   font-size: x-large;
 }
-
 .item-logo a {
   text-decoration: none;
   color: #000;
@@ -289,7 +292,6 @@ form input:focus {
   text-align: center;
   padding: 20px;
 }
-
 .form-news input {
   width: 300px;
 }
@@ -302,11 +304,9 @@ form input:focus {
   align-items: center;
   background-color: rgba(122, 113, 29, 0.336);
 }
-
 .nosotros .cont12a {
   max-width: 1400px;
 }
-
 .nosotros .logo {
   max-width: 550px;
   width: 100%;
@@ -414,6 +414,12 @@ h2 {
 .card {
   border-radius: 20px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Efecto de aumento al pasar el ratón */
+.card:hover {
+  transform: scale(1.1); /* Aumenta el tamaño al 110% */
 }
 
 .card-title {
@@ -438,7 +444,6 @@ h2 {
   color: #000;
   background-color: rgba(122, 113, 29, 0.336);
 }
-
 .btn-nov:hover {
   background-color: rgb(122, 113, 29);
   color: #FFF;
@@ -451,14 +456,11 @@ h2 {
   max-width: 100%;
   border: 1px solid rgba(50, 49, 49, 0.05);
   padding: 5px;
-  margin: 5px;
   border-radius: 10px;
 }
-
 .producto:hover {
   border: 1px solid rgb(0, 0, 0);
 }
-
 .producto:hover .precio {
   color: rgb(122, 113, 29);
 }
@@ -484,7 +486,7 @@ del {
 .foto {
   border-radius: 20px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-  width: 80%;
+  width: 90%;
   max-width: 100%;
   /* Para asegurarse de que no se desborde en pantallas más pequeñas */
   height: auto;
@@ -497,7 +499,6 @@ del {
   font-size: 10px;
   box-shadow: 2px 2px 5px #fff;
 }
-
 .ver-producto:hover {
   background-color: rgb(122, 113, 29);
   color: #FFF;
@@ -519,27 +520,13 @@ del {
   font-size: 25px;
   box-shadow: 2px 2px 5px #fff;
   border-radius: 50%;
-  animation: rebote 9s ease-in-out infinite alternate;
 }
 
 .whatsapp:hover {
   color: #a7efd0;
 }
 
-@keyframes rebote {
-  to {
-    transform: translateY(-100vh);
-  }
-  30% {
-    transform: translateY(0);
-  }
-}
 /* Fin Whatsapp */
-@media only screen and (max-width: 320px) {
-  .newsletter {
-    width: 90%;
-  }
-}
 @media (max-width: 576px) {
   .producto {
     width: 100%;
@@ -578,4 +565,5 @@ del {
     height: 100%;
   }
 }
+
 /*# sourceMappingURL=estilos.css.map */
