--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,583 +1,29 @@
-@charset "UTF-8";
 /* Fuente */
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
 /* Declaracion de Variables */
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Ubuntu", sans-serif;
-}
-
-/* Inicio Footer */
-h3 {
-  text-align: center;
-  text-transform: uppercase;
-  background-color: rgba(122, 113, 29, 0.336);
-  color: #fff;
-  font-size: 15px;
-}
-
-.boxfooter {
-  height: auto;
-  background-color: rgba(122, 113, 29, 0.336);
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.482);
-}
-
-.boxfooter a {
-  text-decoration: none;
-  color: #000;
-}
-
-.boxfooter a:hover {
-  color: rgb(122, 113, 29);
-}
-
-.boxfooter i {
-  font-size: x-large;
-}
-
-.boxfooter i:hover {
-  color: #FFF;
-}
-
-.boxfooter h3 {
-  color: #FFF;
-}
-
-.footer-prim {
-  background-color: rgb(122, 113, 29);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-  padding: 10px;
-}
-
-#a-link:hover {
-  color: #FFF;
-}
-
-.redes {
-  align-self: center;
-}
-
-.rotate-animation, .fa-location-dot, .fa-whatsapp, .fa-phone, .fa-envelope {
-  transform: rotate(0deg);
-  transition: transform 1s ease-in-out;
-}
-
-.rotate-animation:hover, .fa-location-dot:hover, .fa-whatsapp:hover, .fa-phone:hover, .fa-envelope:hover {
-  transform: rotate(360deg);
-}
-
-/* Fin Footer */
-/* Inicio Formulario Contacto */
-.form-contacto {
-  border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.904);
-  text-align: center;
-  margin: 0 auto;
-  max-width: 400px;
-}
-
-.form-contacto button {
-  background-color: rgb(122, 113, 29);
-  border: 1px solid rgb(122, 113, 29) !important;
-}
-
-.form-contacto button:hover {
-  background-color: rgba(122, 113, 29, 0.336);
-  color: #000;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-}
-
-#titulo-formulario {
-  text-align: center;
-  text-transform: uppercase;
-  color: rgba(0, 0, 0, 0.5960784314);
-  font-size: 18px;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
-}
-
-a:hover {
-  color: rgb(122, 113, 29);
-}
-
-span {
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-/* Fin Formulario Contacto */
-/* Bloque Galeria */
-.contenedor-imagenes {
-  background-color: #fff;
-  height: 400px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-areas: "img1 img2 img3 img4" "img5 img6 img7 img8" "img9 img10 img11 img12";
-  grid-gap: 15px;
-  padding: 30px;
-}
-
-.item {
-  border: 3px solid #fff;
-  background-position: center;
-  background-size: cover;
-  border-radius: 10px;
-}
-
-.item:hover {
-  filter: grayscale(100%);
-  transform: scale(1.1);
-  transition: all 0.7s;
-}
-
-.item1 {
-  grid-area: img1;
-  background-image: url(../imagenes/img1.jpg);
-  border-radius: 50%;
-  border-color: rgba(122, 113, 29, 0.336);
-}
-
-.item2 {
-  grid-area: img2;
-  background-image: url(../imagenes/img2.jpg);
-  border-color: rgb(122, 113, 29);
-}
-
-.item3 {
-  grid-area: img3;
-  background-image: url(../imagenes/img3.jpg);
-  border-radius: 50%;
-  border-color: rgba(122, 113, 29, 0.336);
-}
-
-.item4 {
-  grid-area: img4;
-  background-image: url(../imagenes/img4.jpg);
-  border-color: rgb(122, 113, 29);
-}
-
-.item5 {
-  grid-area: img5;
-  background-image: url(../imagenes/img5.jpg);
-  border-radius: 50%;
-  border-color: rgba(122, 113, 29, 0.336);
-}
-
-.item6 {
-  grid-area: img6;
-  background-image: url(../imagenes/img6.jpg);
-  border-color: rgb(122, 113, 29);
-}
-
-.item7 {
-  grid-area: img7;
-  background-image: url(../imagenes/img7.jpg);
-  border-radius: 50%;
-  border-color: rgba(122, 113, 29, 0.336);
-}
-
-.item8 {
-  grid-area: img8;
-  background-image: url(../imagenes/img8.jpg);
-  border-color: rgb(122, 113, 29);
-}
-
-.item9 {
-  grid-area: img9;
-  background-image: url(../imagenes/img9.jpg);
-  border-radius: 50%;
-  border-color: rgba(122, 113, 29, 0.336);
-}
-
-.item10 {
-  grid-area: img10;
-  background-image: url(../imagenes/img10.jpg);
-  border-color: rgb(122, 113, 29);
-}
-
-.item11 {
-  grid-area: img11;
-  background-image: url(../imagenes/img11.jpg);
-  border-radius: 50%;
-  border-color: rgba(122, 113, 29, 0.336);
-}
-
-.item12 {
-  grid-area: img12;
-  background-image: url(../imagenes/img12.jpg);
-  border-color: rgb(122, 113, 29);
-}
-
-/* Fin Bloque Galeria */
-/* Inicio Header */
-.item-logo {
-  font-size: x-large;
-}
-
-.item-logo a {
-  text-decoration: none;
-  color: #000;
-}
-
-.nav-manzana {
-  background-image: linear-gradient(to right top, #a7efd0, #92f2b5, #8cf290, #95f061, #a8eb12);
-}
-
-.navbar {
-  background-image: linear-gradient(to right top, #a7efd0, #92f2b5, #8cf290, #95f061, #a8eb12);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-}
-
-.boton li:hover {
-  background-color: rgb(122, 113, 29);
-  border-radius: 4px;
-}
-
-.boton li:active {
-  background-color: rgba(122, 113, 29, 0.336);
-}
-
-.btn {
-  height: 30px;
-  align-self: center;
-  border: none;
-}
-
-.boton a {
-  color: #fff;
-}
-
-input {
-  height: 30px;
-}
-
-button i {
-  font-size: larger;
-  color: #000;
-}
-
-button i:hover {
-  color: #fff;
-}
-
-/* Estilos para el botón cuando está en hover */
-.btn.btn-outline-success:hover {
-  background-color: rgb(122, 113, 29);
-  color: #fff;
-}
-
-/* Fin  Header */
-/* Newsletter */
-.newsletter {
-  background-color: rgba(122, 113, 29, 0.336);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.904);
-}
-
-form input:focus {
-  border: 1px solid rgb(122, 113, 29) !important;
-  box-shadow: none !important;
-}
-
-.form-news {
-  text-align: center;
-  padding: 20px;
-}
-
-.form-news input {
-  width: 300px;
-}
-
-/* Fin Newsletter */
-/* Inicio Nosotros */
-.nosotros {
-  padding: 70px 0;
-  display: flex;
-  align-items: center;
-  background-color: rgba(122, 113, 29, 0.336);
-}
-
-.nosotros .cont12a {
-  max-width: 1400px;
-}
-
-.nosotros .logo {
-  max-width: 550px;
-  width: 100%;
-}
-
-.nosotros-apple {
-  font-size: 60px;
-}
-
-/* Acordeon */
-.accordion {
-  width: 100%;
-}
-
-/* Inicio Novedades*/
-section {
-  max-width: 90%;
-}
-
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  background-color: rgba(122, 113, 29, 0.336);
-  color: #fff;
-  font-size: 25px;
-}
-
-h2 {
-  text-align: center;
-  text-transform: uppercase;
-  background-color: rgba(122, 113, 29, 0.336);
-  color: #fff;
-  font-size: 20px;
-}
-
-.novedades {
-  display: flex;
-  flex-direction: row;
-}
-
-.novedades-img1 {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0px 0px;
-  background-image: url(../imagenes/novedad1.jpg);
-}
-
-.novedades-img2 {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0px 0px;
-  background-image: url(../imagenes/novedad2.jpg);
-}
-
-.novedades-img3 {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0px 0px;
-  background-image: url(../imagenes/novedad3.jpg);
-}
-
-.novedades-img4 {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0px 0px;
-  background-image: url(../imagenes/novedad4.jpg);
-}
-
-.novedades-img5 {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0px 0px;
-  background-image: url(../imagenes/novedad5.jpg);
-}
-
-.novedades-img6 {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0px 0px;
-  background-image: url(../imagenes/novedad6.jpg);
-}
-
-.novedades-titulo {
-  color: rgba(47, 66, 13, 0.872);
-  font-size: 25px;
-  padding: 5px;
-}
-
-.novedades-desc {
-  padding: 15px;
-}
-
-.novedades-redes a {
-  color: rgb(122, 113, 29);
-  font-size: 35px;
-  letter-spacing: 15px;
-}
-
-.card {
-  border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-}
-
-.card-title {
-  text-shadow: 2px 2px 10px rgba(167, 160, 160, 0.8117647059);
-}
-
-.custom-carousel-prev .carousel-control-prev-icon {
-  background-color: rgb(122, 113, 29);
-  border-radius: 50%;
-}
-
-.custom-carousel-next .carousel-control-next-icon {
-  background-color: rgb(122, 113, 29);
-  border-radius: 50%;
-}
-
-/* Fin Novedades */
-/* Bloque Novedades Home */
-.btn-nov {
-  width: 100px;
-  border-radius: 5px;
-  color: #000;
-  background-color: rgba(122, 113, 29, 0.336);
-}
-
-.btn-nov:hover {
-  background-color: rgb(122, 113, 29);
-  color: #FFF;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-}
-
-/* Productos */
-.producto {
-  width: 250px;
-  max-width: 100%;
-  border: 1px solid rgba(50, 49, 49, 0.05);
-  padding: 5px;
-  margin: 5px;
-  border-radius: 10px;
-}
-
-.producto:hover {
-  border: 1px solid rgb(0, 0, 0);
-}
-
-.producto:hover .precio {
-  color: rgb(122, 113, 29);
-}
-
-del {
-  font-size: small;
-}
-
-.precio {
-  color: #000;
-}
-
-.sku {
-  color: #000;
-}
-
-.name-product {
-  padding: 5px;
-  color: #000;
-  font-size: small;
-}
-
-.foto {
-  border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-  width: 80%;
-  max-width: 100%;
-  /* Para asegurarse de que no se desborde en pantallas más pequeñas */
-  height: auto;
-}
-
-.ver-producto {
-  background-color: rgba(122, 113, 29, 0.336);
-  text-align: center;
-  line-height: 15px;
-  font-size: 10px;
-  box-shadow: 2px 2px 5px #fff;
-}
-
-.ver-producto:hover {
-  background-color: rgb(122, 113, 29);
-  color: #FFF;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
-}
-
-/* Fin Productos */
-/* Whatsapp */
-.whatsapp {
-  height: 40px;
-  width: 40px;
-  background-color: rgb(122, 113, 29);
-  color: #fff;
-  position: fixed;
-  right: 20px;
-  bottom: 40px;
-  text-align: center;
-  line-height: 40px;
-  font-size: 25px;
-  box-shadow: 2px 2px 5px #fff;
-  border-radius: 50%;
-  animation: rebote 9s ease-in-out infinite alternate;
-}
-
-.whatsapp:hover {
-  color: #a7efd0;
-}
-
-@keyframes rebote {
-  to {
-    transform: translateY(-100vh);
-  }
-  30% {
-    transform: translateY(0);
-  }
-}
-/* Fin Whatsapp */
-@media only screen and (max-width: 320px) {
-  .newsletter {
-    width: 90%;
-  }
-}
-@media (max-width: 576px) {
-  .producto {
-    width: 100%;
-  }
-}
-@media (min-width: 576px) and (max-width: 768px) {
-  .producto {
-    width: 100%;
-  }
-}
-/* aplica desde 0 hasta 468px */
-/* Se acomodan las imagenes de la galeria en la vista en 1 col y 12 row */
-@media only screen and (max-width: 468px) {
-  .contenedor-imagenes {
-    background-color: #a7efd0;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(12, 250px);
-    grid-template-areas: "img1" "img2" "img3" "img4" "img5" "img6" "img7" "img8" "img9" "img10" "img11" "img12";
-    grid-gap: 15px;
-    padding: 30px;
-    width: 100%;
-    height: 100%;
-    width: 100%;
-  }
-}
-/* Se acomodan las imagenes de la galeria en la vista en 2 col y 6 row */
-@media only screen and (min-width: 469px) and (max-width: 767px) {
-  .contenedor-imagenes {
-    background-color: #a7efd0;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(6, 250px);
-    grid-template-areas: "img1 img2" "img3 img4" "img5 img6" "img7 img8" "img9 img10" "img11 img12";
-    grid-gap: 15px;
-    padding: 30px;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-
-/*# sourceMappingURL=estilos.scss.map */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+
+$color-principal: #a7efd0;
+$color-secundario: rgb(122, 113, 29);
+$color-footer: rgba(122, 113, 29, 0.336);
+
+
+@import "_footer";
+@import "_formulario";
+@import "_galeria";
+@import "_header";
+@import "_newsletter";
+@import "_nosotros";
+@import "_novedades";
+@import "_productos";
+@import "_whatsapp";
+@import "_medias";
