--- a/css/_novedades.scss
+++ b/css/_novedades.scss
@@ -57,6 +57,15 @@ h2 {
 .card {
     border-radius: 20px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
+    transition: transform 0.3s ease-in-out; 
+
+}
+
+
+
+/* Efecto de aumento al pasar el ratón */
+.card:hover {
+  transform: scale(1.1); /* Aumenta el tamaño al 110% */
 }
 
 .card-title {
